--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,3 @@
-<div>
-  <h1 class="font-bold text-4xl">Pages#index</h1>
-  <p>Find me in app/views/pages/index.html.erb</p>
+<div class="w-2/3 mx-auto">
+  <p class="">Find me in app/views/pages/index.html.erb</p>
 </div>
