--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,15 @@
       <!-- Header -->
       <div class="w-full">
         <h2 class="font-bold text-xl text-center">🌤️️❄️🌧️️</h2>
-        <div class="mx-auto w-2/3 border-t border-gray-200 mt-5 mb-5"></div>
-        <h1 class="font-bold text-4xl text-center mb-20">Weatherman 🔮</h1>
+        <h1 class="font-bold text-gray-700 text-2xl tracking-light text-center drop-shadow-md mb-20">Weather Forecast Services™️</h1>
       </div>
 
       <%= yield %>
 
       <!-- Footer -->
       <div class="w-full">
-        <div class="mx-auto w-2/3 border-t border-gray-200 mt-10 mb-5"></div>
-        <h2 class="font-bold text-xl text-center">🌤️️❄️🌧️️</h2>
+        <div class="mx-auto w-2/3 border-t border-gray-50 mt-20 mb-5"></div>
+        <h2 class="font-bold text-xl text-center">🔮️</h2>
       </div>
 
     </main>
