--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,8 @@
 <div class="w-2/3 mx-auto">
   <div class="mt-10 sm:mt-0">
     <div class="mt-5 md:col-span-2 md:mt-0">
-      <form action="#" method="POST">
+<!--      <form action="#" method="POST">-->
+      <%= form_with(url: results_url, method: "GET") do |form| %>
         <div class="overflow-hidden shadow-2xl sm:rounded-md border">
           <div class="bg-white px-4 py-5 sm:p-6">
             <div class="grid grid-cols-6 gap-6">
@@ -39,7 +40,7 @@
             <button type="submit" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Get Forecast</button>
           </div>
         </div>
-      </form>
+      <% end  %>
     </div>
   </div>
 </div>
