--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,8 +23,8 @@
               </div>
 
               <div class="col-span-6 sm:col-span-3 lg:col-span-2">
-                <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal code</label>
-                <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                <label for="zip" class="block text-sm font-medium text-gray-700">ZIP / Postal code</label>
+                <input type="text" name="zip" id="zip" autocomplete="zip" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
               </div>
 
               <div class="col-span-6 sm:col-span-6">
