--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -2,6 +2,8 @@
 <!--- Results Container --->
 <div class="shadow-xl p-10 rounded-md w-2/3 mx-auto">
   <%= params.inspect %>
+  <hr>
+  <%= @geocoding_resp.inspect %>
 </div>
 <!--- Search Again --->
 <div class="w-2/3 mx-auto mt-20 flex justify-center">
