--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,17 +1,16 @@
-<h2 class="font-bold text-center text-xl tracking-light pb-5 border-b border-gray-50 mb-5">5-day Weather Forecast</h2>
+<h2 class="text-gray-700 font-bold text-center text-xl tracking-light pb-5 mb-5">Weather Forecast Results</h2>
 <!--- Results Container --->
-<div class="shadow-xl p-10 rounded-md w-2/3 mx-auto">
-    <% @parsed_results.each do |forecast| %>
-      <div class="mb-20 flex flex-col">
-        <div class="border-b border-gray-50"><%= formatted_weather_date(forecast["dt"]) %></div>
-        <div>Temp: <%= forecast["main"]["temp"] %></div>
-        <div>Temp Min: <%= forecast["main"]["temp_min"] %></div>
-        <div>Temp Max: <%= forecast["main"]["temp_max"] %></div>
-      </div>
-      <%= forecast.inspect %>
-  <% end %>
+<div class="shadow-xl p-10 rounded-md w-1/3 mx-auto">
+		<% @results.each do |result| %>
+			<div class="mb-10 flex flex-col">
+				<div class="shadow-sm bg-indigo-900 text-white text-center px-2 py-3 rounded-md mb-5 font-bold"><%= formatted_weather_date(result[:date]) %></div>
+				<div><%= formatted_temp temp: result[:temp], label: 'Temperature' %></div>
+				<div><%= formatted_temp temp: result[:temp_min], label: 'Minimum' %></div>
+				<div><%= formatted_temp temp: result[:temp_max], label: 'Maximum' %></div>
+			</div>
+		<% end %>
 </div>
 <!--- Search Again --->
 <div class="w-2/3 mx-auto mt-20 flex justify-center">
-  <a class="rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" href="/">Do Another Search</a>
+	<a class="rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" href="/">Do Another Search</a>
 </div>
