--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -43,3 +43,9 @@
     </div>
   </div>
 </div>
+
+<!-- Footer -->
+<div class="w-full">
+  <div class="mx-auto w-2/3 mt-20 mb-5"></div>
+  <h2 class="font-bold text-6xl text-center">❄️️️</h2>
+</div>
