--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-gray-700 font-bold text-center text-xl tracking-light pb-5 mb-5">Weather Forecast Results</h2>
+<h2 class="text-gray-700 font-bold text-center text-xl tracking-light pb-5 mb-5">Forecast Results</h2>
 <!--- Results Container --->
 <div class="shadow-xl p-10 rounded-md w-1/3 mx-auto">
 		<% @results.each do |result| %>
@@ -11,6 +11,6 @@
 		<% end %>
 </div>
 <!--- Search Again --->
-<div class="w-2/3 mx-auto mt-20 flex justify-center">
+<div class="w-2/3 mx-auto mt-20 flex justify-center mb-20">
 	<a class="rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" href="/">Do Another Search</a>
 </div>
