--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,12 +1,18 @@
 <h2 class="text-gray-700 font-bold text-center text-xl tracking-light pb-5 mb-5">Forecast Results</h2>
 <!--- Results Container --->
 <div class="shadow-xl p-10 rounded-md w-1/3 mx-auto">
-		<% @results.each do |result| %>
-			<div class="mb-10 flex flex-col">
-				<div class="shadow-sm bg-indigo-900 text-white text-center px-2 py-3 rounded-md mb-5 font-bold"><%= formatted_weather_date(result[:date]) %></div>
-				<div><%= formatted_temp temp: result[:temp], label: 'Temperature' %></div>
-				<div><%= formatted_temp temp: result[:temp_min], label: 'Minimum' %></div>
-				<div><%= formatted_temp temp: result[:temp_max], label: 'Maximum' %></div>
+		<% if @results %>
+			<% @results.each do |result| %>
+				<div class="mb-10 flex flex-col">
+					<div class="shadow-sm bg-indigo-900 text-white text-center px-2 py-3 rounded-md mb-5 font-bold"><%= formatted_weather_date(result[:date]) %></div>
+					<div><%= formatted_temp temp: result[:temp], label: 'Temperature' %></div>
+					<div><%= formatted_temp temp: result[:temp_min], label: 'Minimum' %></div>
+					<div><%= formatted_temp temp: result[:temp_max], label: 'Maximum' %></div>
+				</div>
+			<% end %>
+		<% else %>
+			<div class="mb-5 mt-5">
+					<h1 class="text-center font-bold text-gray-700">No Results Found</h1>
 			</div>
 		<% end %>
 </div>
