--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="w-1/3 mx-auto">
   <div class="mt-10 sm:mt-0">
     <div class="mt-5 md:col-span-2 md:mt-0">
-      <%= form_with(url: results_url, method: "GET") do |form| %>
+      <%= form_with(url: results_url, method: "GET", data:  {controller: 'weatherman', action: 'weatherman#submit'}) do |form| %>
         <div class="overflow-hidden shadow-2xl sm:rounded-md border">
           <div class="bg-white px-4 py-5 sm:p-6">
             <div class="grid grid-cols-6 gap-6">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="bg-gray-50 px-4 py-3 text-center sm:px-6">
-            <button type="submit" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Get Forecast</button>
+            <button type="submit" data-weatherman-target="button" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Get Forecast</button>
           </div>
         </div>
       <% end  %>
